Cleanup and fix compiler warnings